# gmock_snippets

./: CMakeLists.txt  README.md  code_uses_interface_1.h  interface_1.h  test_1.cpp
